# addin-com-port

./: CMakeLists.txt  MANIFEST.XML  README.md
dt/: TestDataBase.dt
include/: types.h
src/: AddInNative.cpp  AddInNative.h  ComPortTools.cpp  ComPortTools.h  Component.cpp  Component.h  SampleAddIn.cpp  SampleAddIn.h  addin.def  exports.cpp  str_switch.h  test_app.cpp  xserial.cpp  xserial.hpp
